// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Narration Layout: Pages > renders a past page unchanged 1`] = `
<div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm w-full flex-grow md:mx-0.5 md:min-w-0 md:basis-0 min-h-0 flex flex-col bg-background/60 border-border overflow-hidden"
  >
    <div
      class="flex-grow flex flex-col overflow-hidden p-4 sm:p-1"
    >
      <div
        class="flex flex-col flex-grow overflow-hidden gap-2"
      >
        <div
          class="flex flex-col overflow-hidden narration-text flex-grow border border-border p-2 bg-muted/80 min-h-0 relative"
          dir="ltr"
          style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
        >
          <style>
            [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
          </style>
          <div
            class="w-full flex-auto min-h-0 rounded-[inherit] pr-[11px] [&>div]:!block"
            data-radix-scroll-area-viewport=""
            style="overflow-x: hidden; overflow-y: scroll;"
          >
            <div
              style="min-width: 100%; display: table;"
            >
              <div
                class="absolute top-2 right-2 z-10 flex gap-1"
              >
                <button
                  aria-label="Edit text"
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground narration-tool h-8 w-8"
                  data-base-ui-tooltip-trigger=""
                  data-idle="true"
                  id="base-ui-:rk:"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pencil h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                    />
                    <path
                      d="m15 5 4 4"
                    />
                  </svg>
                </button>
                <button
                  aria-controls="radix-:rl:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  aria-label="More narration options"
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground narration-tool h-8 w-8"
                  data-base-ui-tooltip-trigger=""
                  data-idle="true"
                  data-state="closed"
                  id="base-ui-:rn:"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="mb-2 text-warning"
              >
                <strong>
                  You:
                </strong>
                <div
                  class="[overflow-wrap:anywhere] [&_ul]:list-outside [&_ul]:pl-6 [&_ol]:list-outside [&_ol]:pl-6"
                >
                  <div
                    class="space-y-4 whitespace-normal [&>*:first-child]:mt-0 [&>*:last-child]:mb-0"
                  >
                    <p>
                      I step onto the pier.
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="mb-2 "
              >
                <strong>
                  Event:
                </strong>
                <div
                  data-testid="narration"
                  style="--rl-o: 0;"
                >
                  <div
                    class="[overflow-wrap:anywhere] [&_ul]:list-outside [&_ul]:pl-6 [&_ol]:list-outside [&_ol]:pl-6"
                  >
                    <div
                      class="space-y-4 whitespace-normal [&>*:first-child]:mt-0 [&>*:last-child]:mb-0"
                    >
                      <p>
                        Boards creak. A gull watches you.
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mt-3 flex flex-col gap-2 border border-border rounded-md p-2 bg-background/40"
              >
                <div
                  class="flex items-center gap-1"
                >
                  <div
                    class="flex-1"
                  />
                  <button
                    class="inline-flex items-center justify-center whitespace-nowrap border font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 text-meta"
                  >
                    Tags
                  </button>
                </div>
              </div>
              <div
                class="mt-4 flex flex-col gap-2"
              />
            </div>
          </div>
        </div>
        <div
          class="relative flex flex-col items-center gap-2"
        >
          <div
            class="relative flex w-full items-center justify-center"
          >
            <nav
              aria-label="pagination"
              class="mx-auto flex w-full justify-start md:justify-center"
              role="navigation"
            >
              <ul
                class="flex flex-row items-center gap-1"
              >
                <li
                  class=""
                >
                  <a
                    aria-label="Go to previous page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pl-2.5"
                    href="#"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-left h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m15 18-6-6 6-6"
                      />
                    </svg>
                    <span
                      class="hidden md:inline"
                    >
                      Previous
                    </span>
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 w-10"
                    href="#"
                  >
                    1
                  </a>
                </li>
                <li
                  class=""
                >
                  <button
                    aria-controls="radix-:r14:"
                    aria-current="page"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="Page 2 of 3 — jump to a page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 focus-visible:ring-primary-foreground h-10 w-10"
                    data-state="closed"
                    type="button"
                  >
                    2
                  </button>
                </li>
                <li
                  class=""
                >
                  <a
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 w-10"
                    href="#"
                  >
                    3
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    aria-label="Go to next page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pr-2.5"
                    href="#"
                  >
                    <span
                      class="hidden md:inline"
                    >
                      Next
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-right h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9 18 6-6-6-6"
                      />
                    </svg>
                  </a>
                </li>
              </ul>
            </nav>
            <div
              class="absolute right-0"
            >
              <button
                aria-controls="radix-:rs:"
                aria-expanded="false"
                aria-haspopup="dialog"
                class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 w-32"
                data-state="closed"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-refresh-cw h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
                  />
                  <path
                    d="M21 3v5h-5"
                  />
                  <path
                    d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
                  />
                  <path
                    d="M8 16H3v5"
                  />
                </svg>
                Rollback
              </button>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col gap-2"
        >
          <div
            class="flex items-end"
          >
            <div
              class="relative flex-grow mr-2 flex-shrink-0"
              data-testid="action-input-wrap"
              style="height: 40px;"
            >
              <textarea
                class="absolute inset-x-0 bottom-0 w-full resize-none rounded-md border border-input bg-background px-3 py-2 text-helper leading-normal placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 h-10 overflow-hidden whitespace-nowrap"
                placeholder="Type your action... [square brackets] direct the story as the author"
                rows="1"
                style="overflow-y: hidden;"
              />
            </div>
            <button
              aria-label="About How to Play"
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-background hover:bg-accent hover:text-accent-foreground h-10 w-10 flex-shrink-0 border-primary text-primary mr-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-question-mark h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
            </button>
            <button
              aria-label="Send"
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md border-transparent text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 focus-visible:ring-primary-foreground h-10 px-4 py-2 border-dashed border-2 w-12 sm:w-32"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-send h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Narration Layout: Pages > renders the latest page unchanged 1`] = `
<div>
  <div
    class="rounded-lg border text-card-foreground shadow-sm w-full flex-grow md:mx-0.5 md:min-w-0 md:basis-0 min-h-0 flex flex-col bg-background/60 border-border overflow-hidden"
  >
    <div
      class="flex-grow flex flex-col overflow-hidden p-4 sm:p-1"
    >
      <div
        class="flex flex-col flex-grow overflow-hidden gap-2"
      >
        <div
          class="flex flex-col overflow-hidden narration-text flex-grow border border-border p-2 bg-muted/80 min-h-0 relative"
          dir="ltr"
          style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
        >
          <style>
            [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
          </style>
          <div
            class="w-full flex-auto min-h-0 rounded-[inherit] pr-[11px] [&>div]:!block"
            data-radix-scroll-area-viewport=""
            style="overflow-x: hidden; overflow-y: scroll;"
          >
            <div
              style="min-width: 100%; display: table;"
            >
              <div
                class="absolute top-2 right-2 z-10 flex gap-1"
              >
                <button
                  aria-label="Edit text"
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground narration-tool h-8 w-8"
                  data-base-ui-tooltip-trigger=""
                  data-idle="true"
                  id="base-ui-:r1:"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-pencil h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
                    />
                    <path
                      d="m15 5 4 4"
                    />
                  </svg>
                </button>
                <button
                  aria-controls="radix-:r2:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  aria-label="More narration options"
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground narration-tool h-8 w-8"
                  data-base-ui-tooltip-trigger=""
                  data-idle="true"
                  data-state="closed"
                  id="base-ui-:r4:"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="mb-2 text-warning"
              >
                <strong>
                  You:
                </strong>
                <div
                  class="[overflow-wrap:anywhere] [&_ul]:list-outside [&_ul]:pl-6 [&_ol]:list-outside [&_ol]:pl-6"
                >
                  <div
                    class="space-y-4 whitespace-normal [&>*:first-child]:mt-0 [&>*:last-child]:mb-0"
                  >
                    <p>
                      I wave at the gull.
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="mb-2 "
              >
                <strong>
                  Event:
                </strong>
                <div
                  data-testid="narration"
                  style="--rl-o: 0;"
                >
                  <div
                    class="[overflow-wrap:anywhere] [&_ul]:list-outside [&_ul]:pl-6 [&_ol]:list-outside [&_ol]:pl-6"
                  >
                    <div
                      class="space-y-4 whitespace-normal [&>*:first-child]:mt-0 [&>*:last-child]:mb-0"
                    >
                      <p>
                        The gull does not wave back.
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mt-4 flex flex-col gap-2"
              >
                <button
                  class="inline-flex items-center justify-center rounded-md border text-label font-medium focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-background px-4 py-2 w-full transition-all duration-200 h-auto min-h-[3rem] whitespace-normal border-primary hover:bg-accent hover:text-accent-foreground"
                >
                  <span>
                    Leave
                  </span>
                </button>
                <button
                  class="inline-flex items-center justify-center rounded-md border text-label font-medium focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-background px-4 py-2 w-full transition-all duration-200 h-auto min-h-[3rem] whitespace-normal border-primary hover:bg-accent hover:text-accent-foreground"
                >
                  <span>
                    Wait
                  </span>
                </button>
                <div
                  class="shrink-0 bg-border h-hairline w-full my-1"
                  data-orientation="horizontal"
                  role="none"
                />
                <button
                  class="inline-flex items-center justify-center rounded-md border text-label font-medium focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-background px-4 py-2 w-full transition-all duration-200 h-auto min-h-[3rem] whitespace-normal border-primary hover:bg-accent hover:text-accent-foreground"
                >
                  [Continue the Story]
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="relative flex flex-col items-center gap-2"
        >
          <div
            class="relative flex w-full items-center justify-center"
          >
            <nav
              aria-label="pagination"
              class="mx-auto flex w-full justify-start md:justify-center"
              role="navigation"
            >
              <ul
                class="flex flex-row items-center gap-1"
              >
                <li
                  class=""
                >
                  <a
                    aria-label="Go to previous page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pl-2.5"
                    href="#"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-left h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m15 18-6-6 6-6"
                      />
                    </svg>
                    <span
                      class="hidden md:inline"
                    >
                      Previous
                    </span>
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 w-10"
                    href="#"
                  >
                    1
                  </a>
                </li>
                <li
                  class=""
                >
                  <a
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 w-10"
                    href="#"
                  >
                    2
                  </a>
                </li>
                <li
                  class=""
                >
                  <button
                    aria-controls="radix-:rh:"
                    aria-current="page"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="Page 3 of 3 — jump to a page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 focus-visible:ring-primary-foreground h-10 w-10"
                    data-state="closed"
                    type="button"
                  >
                    3
                  </button>
                </li>
                <li
                  class=""
                >
                  <a
                    aria-label="Go to next page"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-border hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 pr-2.5 pointer-events-none opacity-50"
                    href="#"
                  >
                    <span
                      class="hidden md:inline"
                    >
                      Next
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-right h-4 w-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m9 18 6-6-6-6"
                      />
                    </svg>
                  </a>
                </li>
              </ul>
            </nav>
            <div
              class="absolute right-0"
            >
              <div
                class="flex"
              >
                <button
                  aria-label="Re-generate"
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 gap-1 rounded-r-none md:w-28"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-refresh-cw h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
                    />
                    <path
                      d="M21 3v5h-5"
                    />
                    <path
                      d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
                    />
                    <path
                      d="M8 16H3v5"
                    />
                  </svg>
                  <span
                    class="hidden md:inline"
                  >
                    Re-generate
                  </span>
                </button>
                <button
                  aria-controls="radix-:ri:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  aria-label="More re-generate options"
                  class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 py-2 rounded-l-none border-l-0 px-2"
                  data-state="closed"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-up h-3 w-3"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m18 15-6-6-6 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col gap-2"
        >
          <div
            class="flex items-end"
          >
            <div
              class="relative flex-grow mr-2 flex-shrink-0"
              data-testid="action-input-wrap"
              style="height: 40px;"
            >
              <textarea
                class="absolute inset-x-0 bottom-0 w-full resize-none rounded-md border border-input bg-background px-3 py-2 text-helper leading-normal placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 h-10 overflow-hidden whitespace-nowrap"
                placeholder="Type your action... [square brackets] direct the story as the author"
                rows="1"
                style="overflow-y: hidden;"
              />
            </div>
            <button
              aria-label="About How to Play"
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md border text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-background hover:bg-accent hover:text-accent-foreground h-10 w-10 flex-shrink-0 border-primary text-primary mr-2"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-circle-question-mark h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
                <path
                  d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                />
                <path
                  d="M12 17h.01"
                />
              </svg>
            </button>
            <button
              aria-label="Send"
              class="inline-flex items-center justify-center whitespace-nowrap rounded-md border-transparent text-label font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-inset disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 focus-visible:ring-primary-foreground h-10 px-4 py-2 border-dashed border-2 w-12 sm:w-32"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-send h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                />
                <path
                  d="m21.854 2.147-10.94 10.939"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
